--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 	Changes were made.
 -->
 <html>
+	<link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&family=Montserrat&display=swap" rel="stylesheet">
+
+<div class="container">
+  
+  <div class="cookie-popup cookie-popup--short cookie-popup--dark">
+    
+    <div>
+    This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://google.com">use of cookies</a>
+    </div>
+    <div class="cookie-popup-actions">
+      <button>Okay</button>
+    </div>
+
+  </div>
+  
+</div>
 	<head>
 		<SCRIPT LANGUAGE="JavaScript"> 
 		<!-- Disable 
