--- a/index.html
+++ b/index.html
@@ -215,8 +215,10 @@
 				</section>
 
 		</div>
-			<link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&family=Montserrat&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Exo:wght@800&family=Montserrat&display=swap" rel="stylesheet">
   
+<div class="container">
+										
   <div class="cookie-popup cookie-popup--short cookie-popup--dark">
     
     <div>
