--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://google.com">use of cookies</a>
     </div>
     <div class="cookie-popup-actions">
-      <button>Okay</button>
+      <boutton>Okay</boutton>
     </div>
 
   </div>
