--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   <div class="cookie-popup cookie-popup--short cookie-popup--dark">
     
     <div>
-    This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://google.com">use of cookies</a>
+    This website uses cookies to provide you with a great user experience. By using it, you accept our <a href="https://alptra.github.io/Legal-Notice.html">use of cookies</a>
     </div>
     <div class="cookie-popup-actions">
       <boutton>Okay</boutton>
