--- a/Legal-Notice.html
+++ b/Legal-Notice.html
@@ -107,6 +107,9 @@
 												<h2><FONT COLOR="#1d1d1f">Privacy Policy</FONT></h2>
 											</header>
 											<p>Alptra cares about your privacy and the security of your information. When you submit information to this website using contact form, we collect the data requested to communicate with you in order to track and respond to your submissions.</p>
+											<h2><FONT COLOR="#1d1d1f">Cookie Policy</FONT></h2>
+											</header>
+											<p>Cookies are used to perform analysis of website usage.</p>
 										</article>
 									
 						</div>
