--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h1 id="logo">Alptra</h1>
 							<p class="ml6">
   								<span class="text-wrapper">
-									<span class="letters">Translating more than words.</span>
+									<span class="letters">TRANSLATING MORE THAN WORDS</span>
   								</span>
 							</p>
 
