--- a/projects.html
+++ b/projects.html
@@ -102,13 +102,13 @@
 											<br>Quality Assurance Full season 1220 min | Shows
 											<br>Quality Assurance 200 min | Human Sciences
 											<br>Quality Assurance 90 min | Documentary
-											<br>Translation Synopsis | Documentary
+											<br>Translation of the synopsis | Documentary
 											<br>Captions & Translation French into English | Shows
 											<br>Translation 30 min | Documentary
 											<br>Translation 100 min | Film
 											<br>Translation 3 min | Corporate/HR
 											<br>Translation 26 min | Corporate/HR
-											<br>Creation of subtitles in audio | Finance</p>
+											<br>Creation of subtitles in audios 16 min| Finance</p>
 											<h3>Voice Over</h3>
 											<p>Voice over on a sport app | New Technology</p>
 											<h3>Transcription</h3>
