--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<section id="header">
 					<div class="container">						
 						<!-- Logo -->
-							<h1 id="logo">ALPTRA</h1>
+							<h1 id="logo">Alptra</h1>
 							<p class="ml6">
   								<span class="text-wrapper">
 									<span class="letters">Translating more than words.</span>
