--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 											<br>Quality Assurance Full season 1220 min | Shows
 											<br>Quality Assurance 200 min | Human Sciences
 											<br>Quality Assurance 90 min | Documentary
-											<br>Translation of the synopsis | Documentary
+											<br>Translation | Synopsis
 											<br>Captions & Translation French into English | Shows
 											<br>Translation 30 min | Documentary
 											<br>Translation 100 min | Film
